Change package name javax-servlets tutorial

--- a/java/javax-servlets/web/WEB-INF/web.xml
+++ b/java/javax-servlets/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
            version="4.0">
     <servlet>
         <servlet-name>hello-servlet</servlet-name>
-        <servlet-class>java.com.msita.servlets.HelloServlet</servlet-class>
+        <servlet-class>com.msita.servlets.HelloServlet</servlet-class>
     </servlet>
     
     <servlet-mapping>
